15 / 03 / 2005
--------------

. FreeBSD OK
. preparing for WIP import
. manpage updated
. inserted lots of preferences options
. FTP live installation / deinstall

10 / 03 / 2005
--------------

. Live pkgsrc over FTP works

07 / 03 / 2005
--------------

. chybz's great input handling (see curses_input.[c|h])
. live pkgsrc over FTP 1st tries

06 / 03 / 2005
--------------

. prefs screen

05 / 03 / 2005
--------------

. mass-install rework
. progress bars everywhere !

02 / 03 / 2005
--------------

. conf file support
. [o]ther commands option now available

01 / 03 / 2005
--------------

. CVS update by branch

28 / 02 / 2005
--------------

. help screen
. multi-packages install

27 / 02 / 2005
--------------

. pkgsrc handling firsts works
. pkgsrc fetch when not present by ftp or cvs with branch support
. mirror selection on binary install
. strip "_" from uname for base ftp address building

22 / 02 / 2005
--------------

. changed binary install look'n'feel
. deep depends recursion now allowed
. title rewriting

21 / 02 / 2005
--------------

. 1st wip commit
. compiles / run on FreeBSD

20 / 02 / 2005
--------------

. various fixes
. revamped all recursion code and made it more re-usable

19 / 02 / 2005
--------------

. added pkgfind and made it browsable

17 / 02 / 2005
--------------

. many fixes
. dependencies browsing finally working
. manpage
. env. variable PKG_DBDIR added

13 / 02 / 2005
--------------

. changed global highlight variables to local variables to allow recursion

12 / 02 / 2005
--------------

. scrollbar added
. pushed texts to texts.h

08 / 02 / 2005
--------------

. added a -K pkg_dbdir flag

06 / 02 / 2005
--------------

. added a make show-var fallback when no info found (ex. ap-php)

05 / 02 / 2005
--------------

. changed <- from installed packages behaviour
. variable substitution 1st works

03 / 02 / 2005
--------------

. added [l]ist installed packages, work still needed